styles.css
/******************************
Nugget Post
******************************/
.path-mod-naas .nugget-selected {
    margin-bottom: 75px;
}

.path-mod-naas .nugget-post-selection {
    margin-bottom: 20px;
}

.path-mod-naas .nugget-post-selected {
    background: #a6c3fe;
}

.path-mod-naas .nugget-post {
    border-radius: 5px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    padding: 10px;
    margin: 10px 10px 25px 10px;
}

.path-mod-naas .nugget-post:hover {
    box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.2);
}

.path-mod-naas .nugget-buttons {
    position: absolute;
    right: 30px;
    bottom: 0;
}

.path-mod-naas .nugget-button {
    margin-right: 5px;
}

.path-mod-naas .nugget-button-selection {
    padding: 0 5px 0 5px;
}

.path-mod-naas .nugget-button:focus {
    outline: none;
    box-shadow: none;
}

/* Load more nugget */
.path-mod-naas .show-more-nugget {
    margin-left: 25px;
    margin-bottom: 20px;
}

/******************************
Modal style
******************************/
.path-mod-naas .modal-fade-enter,
.path-mod-naas .modal-fade-leave-to {
    opacity: 0;
}

.path-mod-naas .modal-fade-enter-active,
.path-mod-naas.modal-fade-leave-active {
    transition: opacity .3s ease;
}

.path-mod-naas .nugget-modal-backdrop {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0, 0, 0, 0.3);
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 2;
}

.path-mod-naas .nugget-modal {
    font-family: Open Sans, proxima-nova, nunito, Arial, sans-serif;
    max-height: 90%;
    width: 70%;
    max-width: 1140px;
    position: absolute;
    left: 50%;
    top: 50%;
    background: #fff;
    box-shadow: 2px 2px 20px 1px;
    border-radius: 5px;
    flex-direction: column;
    transform: translate(-50%, -50%);
}

.path-mod-naas .nugget-modal h2,
.path-mod-naas .nugget-modal h3 {
    font-family: Open Sans Condensed, Open Sans, proxima-nova, nunito, Arial, sans-serif;
}

@media (max-width: 1250px) {
    .path-mod-naas .nugget-modal {
        max-height: 75%;
        width: 75%;
    }
}

.path-mod-naas .nugget-modal-header h2 {
    padding: 20px 0 15px 30px;
}

.path-mod-naas .nugget-modal-body {
    padding-bottom: 15px;
}

.path-mod-naas .nugget-modal-footer {
    padding: 10px;
}

.path-mod-naas .nugget-modal-description {
    overflow-y: auto;
    display: block;
    max-height: 200px;
    margin-bottom: 20px;
}

.path-mod-naas .btn-close {
    position: relative;
    float: right;
    padding: 15px;
    top: -10px;
    color: #999;
    font-size: 24px;
    font-weight: bold;
    border: none;
    background: transparent;
}

.path-mod-naas .metadata-field {
    margin: 0 15px; /* stylelint-disable-line declaration-no-important */
}

.path-mod-naas .metadata-list {
    list-style: none;
    padding-left: 5px;
}

.path-mod-naas .metadata-list-item {
    margin-left: 30px;
}

.path-mod-naas .metadata-list-item .badge {
    white-space: normal;
    max-width: 90%;
}

.path-mod-naas .nugget-view {
    margin: 0;
    padding: 0;
}

.path-mod-naas #nugget-preview-modal {
    height: 85%;
}

.path-mod-naas #nugget-preview-modal .nugget-modal-body {
    height: 85%;
}

.path-mod-naas .preview-iframe {
    border: none;
}

/******************************
Aggregations
******************************/
.path-mod-naas div.filters {
    float: left;
    width: 200px;
}

.path-mod-naas div.filters-inner {
    background-color: white;
    display: table-cell;
    padding: 10px;
    margin-bottom: 10px;
}

.path-mod-naas div.separator {
    height: 15px;
}

.path-mod-naas .filters-title {
    margin-top: 10px;
    margin-bottom: 0;
    padding-top: 0;
}

.path-mod-naas a.aggregation-title {
    color: #000;
    font-weight: 400;
}

.path-mod-naas a.aggregation-title:hover {
    text-decoration: none;
}

.path-mod-naas .hide-authors {
    display: none;
}

.path-mod-naas .show-more {
    margin-left: 10px;
}

.path-mod-naas .clear-filters {
    font-size: 13px;
    margin-top: 15px;
}

.path-mod-naas div.filters img {
    margin-left: 40px;
}

/******************************
facets badge
******************************/
.path-mod-naas .badge-margin {
    margin: 1px;
}


/******************************
facets tree-view
******************************/
.path-mod-naas .related-domains-list {
    margin: 0;
    padding: 0;
}

.path-mod-naas .related-domains-list-element {
    list-style-type: none;
}

/* Style the caret */
.path-mod-naas .tree-view-caret {
    cursor: pointer;
    user-select: none;
}

.path-mod-naas .tree-view-caret::after {
    content: "\25BC";
    color: black;
    display: inline-block;
    margin-right: 6px;
    transform: rotate(-90deg);
}

.path-mod-naas .tree-view-caret-down::after {
    transform: rotate(0deg);
}


/******************************
Completion modal
******************************/
.path-mod-naas #completion-modal-button button {
    padding: 10px 30px;
    margin: 30px;
}

.path-mod-naas .rating {
    display: flex;
    flex-direction: row-reverse;
    justify-content: center;
    height: 40px;
    margin-bottom: 0;
}

.path-mod-naas .star {
    color: lightgrey;
    padding: 0 4px;
}

.path-mod-naas .star i {
    font-size: 32px;
}

.path-mod-naas .star:hover,
.path-mod-naas .star:hover ~ .star {
    color: orange;
}

.path-mod-naas .star.checked,
.path-mod-naas .star.checked ~ span {
    color: orange;
}

.path-mod-naas .rating-description {
    color: #999;
    font-size: 14px;
    margin: 10px 0;
}

.path-mod-naas .finish-learning-outcomes {
    margin: 50px 0;
}

.path-mod-naas .finish-learning-outcomes span {
    display: block;
}


/******************************
Other style
******************************/
.path-mod-naas .course-button {
    margin: 0 18px;
    height: 40px;
}

.path-mod-naas .course-button a {
    float: right;
}

.path-mod-naas .language-select {
    margin-left: 5px;
    padding: 0.3rem 1rem 0.5rem 1rem;
    cursor: pointer;
}

.path-mod-naas .search-center {
    display: block;
    margin-top: auto;
    margin-bottom: auto;
    margin-left: 10px;
    border: 1px solid;
}

.path-mod-naas .md-layout {
    margin: 0;
}

.path-mod-naas .btn-replace {
    margin-left: 10px;
}

.path-mod-naas .nugget-display {
    width: 100%;
}

.path-mod-naas .h-100 {
    height: 100%;
}

.path-mod-naas .w-100 {
    width: 100%;
}

/* Logo fix (for Moodle 4) */
:root {
    --activityother: #399be2;
}

/* Fix for Boost theme (Moodle 3) */
#nav-drawer {
    z-index: inherit !important; /* stylelint-disable-line declaration-no-important */
}

